Final fixes   table footer alignment   breakpoints expanded

--- a/static/table.css
+++ b/static/table.css
@@ -1,7 +1,7 @@
 @import './matches.css';
 
 html {
-    scrollbar-gutter: stable both-edges;
+    scrollbar-gutter: stable;
 }
 
 body {
@@ -10,7 +10,7 @@ body {
 
 .main {
     width: 100%;
-    max-width: 1080px;
+    max-width: 1440px;
     scrollbar-gutter: stable both-edges;
     margin: 0 auto;
     font-family: 'Comfortaa', cursive;
@@ -22,6 +22,7 @@ body {
     --table-alternate-row-color: white;
     background-color: var(--table-background-color);
     width: 100%;
+    max-width: 100%;
     border-collapse: collapse;
 }
 
@@ -128,7 +129,6 @@ body {
 
 .table-footer {
     display: flex;
-    justify-content: center;
     padding: 20px 0;
     font-size: 20px;
 }
@@ -159,7 +159,7 @@ body {
 
 
 /* Tilpasning for små skjermer */
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 550px) {
     /* remove table head */
     .table-head {
         display: none;
@@ -201,7 +201,7 @@ body {
     display: none;
 }
 
-@media screen and (min-width: 1080px) {
+@media screen and (min-width: 1220px) {
     .table .table-head-second-row span.small-only {
         display: none;
     }
